--- a/EmployeeManagementSystem/appsettings.json
+++ b/EmployeeManagementSystem/appsettings.json
@@ -14,5 +14,11 @@
         "Issuer": "your-issuer",
         "Audience": "your-audience",
         "ExpiresInMinutes": 10
+    },
+    "EmailSettings": {
+        "SmtpServer": "smtp.gmail.com",
+        "SmtpPort": "587",
+        "Email": "meghal.tinku@gmail.com",
+        "Password": "unzt pcmv fnjl jofl"
     }
 }
