--- a/EmployeeManagementSystem/appsettings.json
+++ b/EmployeeManagementSystem/appsettings.json
@@ -19,6 +19,6 @@
         "SmtpServer": "smtp.gmail.com",
         "SmtpPort": "587",
         "Email": "meghal.tinku@gmail.com",
-        "Password": "unzt pcmv fnjl jofl"
+        "Password": ""
     }
 }
